# wiwinwlh

./: .gitignore  .travis.yml  LICENSE  Makefile  Parser.hs  README.md  Shakefile.hs  acid.hs  aeson_structured.hs  aeson_unstructured.hs  applicative.hs  attoparsec.hs  bytestring.hs  cassava_structured.hs  cassava_unstructured.hs  conduit.hs  constraintkinds.hs  data.hs  datafamily.hs  deploy.sh  derive.hs  derive_aeson.hs  diagrams.hs  either.hs  eithert.hs  errata.md  errors.hs  example.json  exceptions.hs  extensions.csv  extensions.html  family_nat_operators.hs  family_type.hs  fext.hs  ffi.hs  final.hs  foldable_traversable.hs  free_impl.hs  gadt.hs  generics.hs  (+55 more)
.github/workflows/: build-and-deploy.yml
css/: layout.css  sidebar.css  style.css
img/: .gitignore  Makefile  class.dot  cover.ps  ghc.dot  graph1.dot  graph2.dot  numerics.dot  par.dot  tree.dot
js/: nav.js
resources/: back.tex  copyright.html  copyright.md  copyright.tex  cover.tex  dtrt.sty  haskell.sty  page.epubt  page.latex  page.tmpl  template-github.tex  template.html  template.tex  unicodemapping.tex
src/: Antiquote.hs  Class.hs  EnumFamily.hs  Vector.agda  abstract_constraints.hs  async.hs  attoparsec.hs  categories.hs  cereal.hs  ci  complexlens.hs  constraint_list.hs  cont.hs  countargs.hs  cquote.hs  creal.hs  criterion.hs  datakinds.hs  debruijn.hs  dictionaries.hs  dlist.hs  dynamic.hs  either.hs  either_impl.hs  eithert.hs  equal.hs  errors.hs  existential.hs  family_nat.hs  ffi.hs  free.hs  free_impl.hs  function.hs  ghci.conf  graph.hs  hashtables.hs  hlist.hs  hoas.hs  impredicative.hs  initial.hs  (+56 more)
src/01-basics/: README.md  bottoms.hs  ci  defer.hs  errors.hs  fail.hs  ghci.conf  mylibrary.cabal  stacktrace.hs  trace.hs  typedhole.hs
src/02-monads/: README.md  ci  example.cabal  list.hs  list_impl.hs  maybe.hs  maybe_impl.hs  reader_impl.hs  state.hs  state_impl.hs  writer.hs  writer_impl.hs
src/03-monad-transformers/: cabal.project  ci  duplicate_fields.hs  example.cabal  newtype.hs  newtype_deriving.hs  overloaded_labels.hs  polysemy.hs  stack.yaml  (+1 more)
src/06-prelude/: README.md  ci  example.cabal  foldable_traversable.hs  foundation.hs  split.hs  stack.yaml
src/07-text-bytestring/: README.md  builder.hs  bytestring.hs  ci  convert.hs  example.cabal  overloadedlist.hs  regex.hs  stack.yaml
src/09-errors/: README.md  ci  either_impl.hs  errors.hs  example.cabal  exceptt.hs  spoon.hs  stack.yaml
src/10-advanced-monads/: README.md  base.hs  ci  cont_impl.hs  example.cabal  free_dsl.hs  free_impl.hs  indexed.hs  logict.hs  mmorph.hs  monadfix.hs  partiality.hs  rws.hs  st.hs
src/14-interpreters/: README.md  catamorphism.hs  ci  example.cabal  factorial.hs  final.hs  initial.hs  recursion_schemes.hs
src/15-testing/: README.md  arbitrary.hs  ci  criterion.hs  example.cabal  quickspec.hs  silently.hs  stack.yaml  tasty.hs
src/16-type-families/: README.md  ci  constraintkinds.hs  dict.hs  example.cabal  fundeps.hs  mono.hs  mparam_fun.hs  role_infer.hs  roles.hs
src/17-promotion/: README.md  Vector.agda  ci  closed_typefamily.hs  datakinds.hs  errors.hs  errors_dsl.hs  example.cabal  hasfield.hs  hlist.hs  nonempty.hs  singleton.hs  typefamily.hs  typelevel_fields.hs  typelevel_strings.hs  typemap.hs
src/18-generics/: README.md  biplate.hs  ci  example.cabal  generics.hs  hashable.hs  syb.hs  typeable.hs
src/19-numbers/: README.md  arithmoi.hs  ci  example.cabal  polynomial.hs  puzzle.hs  scientific.hs  stack.yaml  stats.hs
src/19-numbers/diffeq/: Main.hs  example.cabal  stack.yaml
src/20-data-structures/: README.md  ci  example.cabal  hashtables.hs  hblas.hs  map.hs  set.hs  stack.yaml  tree.hs
src/22-concurrency/: README.md  ci  example.cabal  par.hs  spark.hs  sparks.hs  stm.hs  strategies.hs  strategies_param.hs
src/24-parsing/: README.md  attoparsec.hs  ci  configurator.hs  example.cabal  example.config  generics.hs  lexer.hs  lexer_text.hs  megaparsec.hs  optparse_generic.hs  parser.hs  recursive-generics.hs  simple.ml  simple_parser.hs  stack.yaml
src/24-parsing/happy/: Lexer.x  Parser.y  example.cabal
src/25-streaming/: README.md  ci  conduit.hs  example.cabal  lazyio.hs  pipes_file.hs  pipes_io.hs  stack.yaml
src/26-data-formats/: README.md  aeson_custom.hs  aeson_derive.hs  aeson_structured.hs  cassava_structured.hs  cassava_unstructured.hs  ci  crew.json  example.cabal  example.yaml  stack.yaml  yaml.hs
src/27-web/: README.md  blaze.hs  blaze_instance.hs  ci  example.cabal  hastache.hs  hastache_generic.hs  http.hs  lucid.hs  req.hs  stack.yaml  warp.hs
src/27-web/mini-servant/: Main.hs  example.cabal
src/28-databases/: README.md  acid.hs  books.db  booktown.sql  ci  example.cabal  hedis.hs  hedis_pubsub.hs  postgres.hs  postgres_custom.hs  postgres_qq.hs  sqlite.hs  stack.yaml
src/28-databases/mini-selda/: Main.hs  company.sqlite  example.cabal  stack.yaml
src/29-ghc/: README.md  ci  closure_size.hs  cmm_include.hs  ekg.hs  example.cabal  example.hs  factorial.cmm  heapview.hs  hie.hs  io_impl.hs  monad_prim.hs  prim.hs  profile.hs  specialize.hs  stack.yaml
src/29-ghc/artifacts/: example.dump-asm  example.dump-cmm  example.dump-parsed  example.dump-simpl  example.dump-stg
src/29-ghc/cmm/: Main.hs  example.cabal  example.cmm
src/29-ghc/simd/: example.cabal  simd.hs
src/30-languages/: README.md  ci  example.cabal  llvm-general.hs  llvm-hs.hs  llvm-irbuilder.hs  pretty.hs  prettysimple.hs  repline.hs  stack.yaml  unbound-generics.hs  unbound.hs  wlpretty.hs
src/31-template-haskell/: Insert.hs  Multiline.hs  Quasiquote.hs  README.md  Singleton.hs  Splice.hs  ci  cquote.hs  derive.hs  enum_family_splice.hs  example.cabal  multiline.hs  singleton_lib.hs  singleton_promote.hs  splice_singleton.hs  stack.yaml  template_info.hs  use_antiquote.hs
src/32-cryptography/: AES.hs  Argon.hs  Blake2.hs  ChaCha.hs  Curve25519.hs  DH.hs  DSA.hs  ECC.hs  ECDH.hs  ECDSA.hs  Ed25519.hs  Galois.hs  HMAC.hs  Keccak.hs  MD5.hs  Merkle.hs  Pairing.hs  Poly1305.hs  RIPEMD.hs  SHA.hs  Secp256k1.hs  SipHash.hs  Whirlpool.hs  ci  example.cabal  stack.yaml
(+93 files in other folders)
