name:                wiwinwlh
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  build-depends:       
    base         >= 4.7 && <4.9,
    pretty       >= 1.1 && <1.2,
    containers   >= 0.5 && <0.6,
    shake        >= 0.15 && <0.16,
    pandoc       >= 1.15 && <1.16
  build-tools:         alex, happy
  default-language:    Haskell2010
