name:                wiwinwlh
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  build-depends:
      base
    , containers
    , pandoc
  default-language:  Haskell2010
