cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2016 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
tested-with:   GHC ==7.6.3
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:    base >=4.6 && <4.14
