cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base          >=4.6     && <4.14
    , split         >=0.2.3.3 && <0.3
    , transformers  >=0.5     && <0.6
