name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    string-conv     >= 0.1  && <0.2,
    text            >= 1.2  && <1.3,
    bytestring      >= 0.10 && <0.11,
    base            >= 4.6  && <4.10

  default-language:    Haskell2010
