name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base            >= 4.6 && <4.14,
    spoon           >= 0.3 && <0.4,
    errors          >= 2.3 && <2.4,
    either          >= 4.4 && <5.1,
    transformers    >= 0.5 && <0.6,
    mtl             >= 2.2 && <2.3

  default-language:    Haskell2010
