name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    safe              >= 0.3 && <0.4,
    mmorph            >= 1.0 && <1.1,
    mtl               >= 2.2 && <2.3,
    transformers-base >= 0.4 && <0.5,
    monad-control     >= 1.0 && <1.1,
    lifted-base       >= 0.2 && <0.3,
    base              >= 4.6 && <4.10

  default-language:    Haskell2010
