cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base               >=4.10    && <4.14
    , containers         >=0.6.0.1 && <0.7
    , recursion-schemes  >=5.1.3   && <5.2
