name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base              >= 4.6 && <4.14,
    tasty             >= 1.2 && <1.3,
    tasty-hunit       >= 0.9 && <0.11,
    tasty-quickcheck  >= 0.10 && <0.11,
    tasty-smallcheck  >= 0.8 && <0.9,
    silently          >= 1.2 && <1.3,
    quickspec         >= 2.1 && <2.2,
    smallcheck        >= 1.1 && <1.2,
    criterion      -any

  default-language:    Haskell2010
