cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base                  >=4.6      && <4.14
    , hashable              >=1.2.0.0  && <1.4
    , unordered-containers  >=0.2.10.0 && <0.3
    , vector                >=0.11.0.0 && <0.13
