cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      aeson
    , base      >=4.6     && <4.14
    , cereal    >=0.5.8.1 && <0.6
    , uniplate  >=1.6.12  && <1.7
