name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base            >= 4.10 && <4.14,
    poly            >= 0.3 && <0.4,
    scientific      >= 0.3 && <0.4,
    sbv             >= 8.5 && <8.6,
    statistics      >= 0.15 && <0.16,
    arithmoi        >= 0.9 && <0.11

  default-language:    Haskell2010
