cabal-version: >=1.10
name:          example
version:       0.1.0.0
copyright:     2016 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base                  >=4.10     && <4.14
    , containers            >=0.6.0.1  && <0.7
    , dlist                 >=0.8.0.7  && <0.9
    , hashtables            >= 1.2     && <1.3
    , hblas                 >= 0.4     && <0.5
    , hmatrix               >= 0.20    && <0.21
    , unordered-containers  >=0.2.10.0 && <0.3
