name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    attoparsec           >= 0.13 && <0.14,
    parsec               >= 3.1  && <3.2,
    optparse-applicative >= 0.12 && <0.13,
    configurator         >= 0.3  && <0.4,
    text                 >= 1.2  && <1.3,
    base                 >= 4.6 && <4.10

  default-language:    Haskell2010
