name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base                 >= 4.6  && <4.14,
    attoparsec           >= 0.13 && <0.14,
    megaparsec           >= 7.0  && <9.0,
    parsec               >= 3.1  && <3.2,
    optparse-applicative >= 0.12 && <0.15,
    optparse-generic     >= 1.3  && <1.4,
    configurator         >= 0.3  && <0.4,
    bytestring           >= 0.10 && <0.11,
    parser-combinators   -any,
    text                 >= 1.2  && <1.3

  default-language:    Haskell2010
