name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    aeson           -any,
    yaml            -any,
    text            -any,
    bytestring      -any,
    pretty-show     -any,
    base            >= 4.6 && <4.10

  default-language:    Haskell2010
