cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      aeson        >=1.4.6.0  && <1.5
    , base         >=4.6      && <4.14
    , cassava      >=0.5.2.0  && <0.6
    , pretty-show  >=1.10     && <1.11
    , yaml         >=0.11.2.0 && <0.12
