name:                example
version:             0.1.0.0
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2020 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10

library 
  default-language: Haskell2010
  build-depends:       
    base            >= 4.6    && <4.14,
    mtl             >= 2.2    && <2.3,
    text            >= 1.2    && <1.3,
    aeson           >= 1.4    && <1.5,
    req             >= 3.0    && <3.1,
    lucid           >= 2.9.12 && <2.10,
    scotty          >= 0.11   && <0.12,
    Spock           >= 0.13   && <0.14,
    servant         >= 0.16   && <0.17,
    servant-server  >= 0.16   && <0.17
