cabal-version: >=1.10
name:          example
version:       0.1.0.0
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      aeson           >=1.4     && <1.5
    , async           >=2.2.2   && <2.3
    , base            >=4.6     && <4.14
    , http-client     >=0.6     && <0.7
    , http-types      >=0.12.3  && <0.13
    , lucid           >=2.9.12  && <2.10
    , mtl             >=2.2     && <2.3
    , req             >=3.0     && <3.1
    , scotty          >=0.11    && <0.12
    , servant         >=0.16    && <0.17
    , servant-server  >=0.16    && <0.17
    , Spock           >=0.13    && <0.14
    , text            >=1.2     && <1.3
    , wai             >=3.2.2.1 && <3.3
    , warp            >=3.3.0   && <3.4
