name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    mtl               >= 2.2 && <2.3,
    hedis             >= 0.6 && <0.8,
    async             >= 2.0 && <2.2,
    bytestring        >= 0.9 && <0.11,

    acid-state        >= 0.14 && <0.15,
    safecopy          >= 0.8 && <0.9,
    containers        >= 0.5 && <0.6,
    text              >= 1.2 && <1.3,

    resource-pool     >= 0.2 && <0.3,

    postgresql-simple >= 0.5  && <0.6,
    base              >= 4.6 && <4.10

  default-language:    Haskell2010
