cabal-version: >=1.10
name:          example
version:       0.1.0.0
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      acid-state
    , base               >=4.6     && <4.14
    , hedis              >=0.12    && <0.13 
    , postgresql-simple  >=0.6     && <0.7 
    , selda              >=0.5.1.0 && <0.6
    , sqlite-simple      >=0.4     && <0.5
