name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base            >= 4.10 && <4.14,
    ghc             >=8.2.2 && <8.9,
    ghc-paths       -any,
    ghc-boot-th     -any,
    hie-bios        -any,
    transformers    -any,
    mtl             -any

  default-language:    Haskell2010
