cabal-version: >=1.10
name:          example
version:       0.1.0.0
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base           >= 4.10  && <4.14
    , ghc            == 8.6.5
    , ekg            >= 0.4.0 && < 0.5
    , transformers   >= 0.5.6 && < 0.6
    , ghc-boot-th    >= 8.6.5 && < 8.7
    , mtl            >= 2.2.2 && < 2.3
    , ghc-heap-view  >= 0.6.1 && < 0.7
    , ghc-paths      >= 0.1.0 && < 0.2
    , hie-bios       >= 0.4.0 && < 0.5
