name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2020 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10

library 
  default-language:    Haskell2010
  build-depends:      
    base                        >= 4.6 &&  <4.14,
    text                        >= 1.2 &&  <1.3,
    mtl                         >= 2.2 &&  <2.3,
    process                     >= 1.6 &&  <1.7,
    unbound-generics            >= 0.4 &&  <0.5,
    unbound                     >= 0.5 &&  <0.6,
    repline                     >= 0.2 &&  <0.3,
    llvm-hs-pure                >= 9.0 &&  <10.0,
    pretty-simple               >= 2.0 &&  <3.3,
    prettyprinter               >= 1.1 &&  <1.7,
    prettyprinter-ansi-terminal >= 1.1 &&  <1.6
