name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base            >= 4.6 && <4.10,
    bytestring      >= 0.10 && <0.11,
    cereal          -any,
    cryptonite      >= 0.19 && <0.21

  default-language:    Haskell2010
