name:                example
version:             0.1
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2020 Stephen Diehl
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library 

  build-depends:       
    base            >= 4.10 && < 4.14,
    cryptonite      >= 0.20 && < 0.30,
    pairing         >= 1.0  && < 2.0,
    elliptic-curve  >= 0.3  && < 0.4,
    galois-field    >= 1.0  && < 1.1,
    memory          -any,
    bytestring      -any
  default-language:    Haskell2010
