cabal-version: >=1.10
name:          example
version:       0.1
copyright:     2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
tested-with:   GHC ==7.6.3
category:      Documentation
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:
      base            >=4.10     && <4.14
    , bytestring      >=0.10.8.2 && <0.11
    , cryptonite      >=0.20     && <0.30
    , elliptic-curve  >=0.3      && <0.4
    , galois-field    >=1.0      && <1.1
    , memory          >=0.14.0   && <0.16
    , pairing         >=1.0      && <2.0
