name:                example
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable assign
  build-depends:       
      base       >= 4.6 && <4.14
    , array      >= 0.5 && <0.6
    , containers >= 0.5 && <0.7
    , mtl        >= 2.2
  default-language:    Haskell2010
  main-is:             Main.hs
  build-tools:         alex, happy
  other-modules:
    Parser
    Lexer
    Syntax
    Eval
