cabal-version: >=1.10
name:          example
version:       0.1.0.0
build-type:    Simple

executable example-server
  main-is:          Main.hs
  build-tools:      alex -any, happy -any
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      array           >=0.5      && <0.6
    , base            >=4.6      && <4.14
    , blaze-html      >=0.9.1.2  && <0.10
    , blaze-markup    >=0.8.2.3  && <0.9
    , bytestring      >=0.10.8.2 && <0.11
    , containers      >=0.5      && <0.7
    , exceptions      >=0.10.4   && <0.11
    , http-api-data   >=0.4.1.1  && <0.5
    , mtl             >=2.2      && <2.3
    , servant         >=0.16.2   && <0.17
    , servant-blaze   >=0.9      && <0.10
    , servant-server  >=0.16.2   && <0.17
    , text            >=1.2.3.1  && <1.3
    , transformers    >=0.5.6.2  && <0.6
    , warp            >=3.3.5    && <3.4
