cabal-version: >=1.10
name:          example
version:       0.1.0.0
build-type:    Simple

executable example
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      array           >=0.5      && <0.6
    , base            >=4.6      && <4.14
    , mtl             >=2.2      && <2.3
    , text            >=1.2.3.1  && <1.3
    , transformers    >=0.5.6.2  && <0.6
    , selda           >=0.5.0    && <0.6
    , selda-sqlite    >=0.1.0    && <0.2
