name:                example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable simd-example
  build-depends:       
      base       >= 4.6 && <4.14,
      ghc-prim   -any
  default-language:    Haskell2010
  main-is: simd.hs
  ghc-options:
    -fllvm
    -ddump-to-file
    -ddump-llvm
    -ddump-asm
